@@ -20,8 +20,8 @@ package com.walmartlabs.concord.repository;
  * =====
  */
 
-import com.google.common.collect.ImmutableSet;
-import com.walmartlabs.concord.common.IOUtils;
+import com.walmartlabs.concord.common.AuthTokenProvider;
+import com.walmartlabs.concord.common.PathUtils;
 import com.walmartlabs.concord.common.secret.BinaryDataSecret;
 import com.walmartlabs.concord.common.secret.KeyPair;
 import com.walmartlabs.concord.common.secret.UsernamePassword;
@@ -32,7 +32,9 @@ import org.slf4j.LoggerFactory;
 
 import javax.annotation.Nullable;
 import java.io.*;
+import java.net.URI;
 import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.Duration;
@@ -53,14 +55,22 @@ public class GitClient {
     private static final int SUCCESS_EXIT_CODE = 0;
 
     private final GitClientConfiguration cfg;
-
-    private final List<String> sensitiveData;
+    private final AuthTokenProvider authProvider;
+    private final Set<Obfuscation> sensitiveData;
     private final ExecutorService executor;
 
-    public GitClient(GitClientConfiguration cfg) {
+    public GitClient(GitClientConfiguration cfg, AuthTokenProvider authProvider) {
         this.cfg = cfg;
-        this.sensitiveData = cfg.oauthToken() != null ? Collections.singletonList(cfg.oauthToken()) : Collections.emptyList();
+        this.authProvider = authProvider;
         this.executor = Executors.newCachedThreadPool();
+        this.sensitiveData = new LinkedHashSet<>();
+
+        // urls with user info.
+        sensitiveData.add(new Obfuscation("https://([^@]*)@", "https://***@"));
+
+        cfg.oauthToken().ifPresent(oauth ->
+                // definitely don't print a hard-code oauth token
+                sensitiveData.add(new Obfuscation(oauth, "***")));
     }
 
     public FetchResult fetch(FetchRequest req) {
@@ -299,14 +309,65 @@ public class GitClient {
         }
     }
 
-    private String updateUrl(String url, Secret secret) {
-        url = url.trim();
+    String updateUrl(String url, Secret secret) {
+        if (!url.matches("^[A-Za-z][A-Za-z0-9+.-]+://.*")) {
+            // no scheme. Assume ssh, e.g. from GitHub like 'git@github.com:owner/repo.git'
+            assertUriAllowed("ssh://" + url);
 
-        if (secret != null || cfg.oauthToken() == null || url.contains("@") || !url.startsWith("https://")) {
+            return url; // return un-modified. git cli doesn't want the ssh scheme
+        }
+
+        URI uri = assertUriAllowed(url);
+
+        if (url.contains("@") || !url.startsWith("https://")) {
+            // provided url already has credentials OR it's a non-https url
             return url;
         }
 
-        return "https://" + cfg.oauthToken() + "@" + url.substring("https://".length());
+        if (secret instanceof UsernamePassword up) {
+            // Secret contains static auth (token or username). No lookup needed.
+            return "https://" +
+                    (up.getUsername() == null ? "" : up.getUsername() + ":") +
+                    String.valueOf(up.getPassword()) +
+                    "@" +
+                    url.substring("https://".length());
+        }
+
+        // This will either add auth from a matching provider, or none for anonymous access
+        return authProvider.addUserInfoToUri(uri, secret).toString();
+    }
+
+    private URI assertUriAllowed(String rawUri) {
+        // make sure it's in valid format
+        URI uri = URI.create(rawUri);
+        assertUriAllowed(uri);
+
+        return uri;
+    }
+
+    private void assertUriAllowed(URI uri) {
+        String providedScheme = uri.getScheme();
+        Set<String> allowedSchemes = cfg.allowedSchemes();
+        boolean hasScheme = providedScheme != null && (!providedScheme.isEmpty());
+
+        if (allowedSchemes.isEmpty()) {
+            return; // allow all
+        }
+
+        // the provided repo string is definitely an allowed protocol.
+        if (hasScheme && allowedSchemes.contains(providedScheme)) {
+            return;
+        }
+
+        // the provided repo string has no explicit scheme, should be understood to use an ssh connection
+        if (!hasScheme && uri.getUserInfo() != null) {
+            return;
+        }
+
+        String msg = String.format("Provided repository ('%s') contains an unsupported URI scheme: '%s'.",
+                uri, uri.getScheme());
+        log.warn(msg);
+        throw new RepositoryException(msg);
     }
 
     private void updateSubmodules(Path workDir, Secret secret) {
@@ -452,9 +513,15 @@ public class GitClient {
                 StringBuilder sb = new StringBuilder();
                 try (BufferedReader reader = new BufferedReader(new InputStreamReader(p.getInputStream()))) {
                     String line;
+                    long bytesRead = 0;
+
                     while ((line = reader.readLine()) != null) {
+                        bytesRead += line.getBytes().length;
+
                         log.info("GIT (stdout): {}", hideSensitiveData(line));
-                        sb.append(line).append("\n");
+                        if (bytesRead <= cfg.maxGitCliOutputBytes()) {
+                            sb.append(line).append("\n");
+                        }
                     }
                 }
                 return sb;
@@ -464,9 +531,14 @@ public class GitClient {
                 StringBuilder sb = new StringBuilder();
                 try (BufferedReader reader = new BufferedReader(new InputStreamReader(p.getErrorStream()))) {
                     String line;
+                    long bytesRead = 0;
                     while ((line = reader.readLine()) != null) {
+                        bytesRead += line.getBytes().length;
+
                         log.info("GIT (stderr): {}", hideSensitiveData(line));
-                        sb.append(line).append("\n");
+                        if (bytesRead <= cfg.maxGitCliOutputBytes()) {
+                            sb.append(line).append("\n");
+                        }
                     }
                 }
                 return sb;
@@ -501,9 +573,7 @@ public class GitClient {
         env.put("GIT_TERMINAL_PROMPT", "0");
 
         try {
-            if (secret instanceof KeyPair) {
-                KeyPair keyPair = (KeyPair) secret;
-
+            if (secret instanceof KeyPair keyPair) {
                 key = createSshKeyFile(keyPair);
                 ssh = createUnixGitSSH(key);
 
@@ -516,24 +586,15 @@ public class GitClient {
                 }
 
                 log.info("using GIT_SSH to set credentials");
-            } else if (secret instanceof UsernamePassword) {
-                UsernamePassword userPass = (UsernamePassword) secret;
-
+            } else if (secret instanceof UsernamePassword userPass) {
                 askpass = createUnixStandardAskpass(userPass);
 
                 env.put("GIT_ASKPASS", askpass.toAbsolutePath().toString());
                 env.put("SSH_ASKPASS", askpass.toAbsolutePath().toString());
 
                 log.info("using GIT_ASKPASS to set credentials ");
-            } else if (secret instanceof BinaryDataSecret) {
-                BinaryDataSecret token = (BinaryDataSecret) secret;
-
-                askpass = createUnixStandardAskpass(new UsernamePassword(new String(token.getData()), "".toCharArray()));
-
-                env.put("GIT_ASKPASS", askpass.toAbsolutePath().toString());
-
-                log.info("using GIT_ASKPASS to set credentials ");
             }
+            // if secret is single-value, it was already applied to the URL in updateUrl()
 
             env.put("GIT_HTTP_LOW_SPEED_LIMIT", String.valueOf(cfg.httpLowSpeedLimit()));
             env.put("GIT_HTTP_LOW_SPEED_TIME", String.valueOf(cfg.httpLowSpeedTime().getSeconds()));
@@ -555,14 +616,14 @@ public class GitClient {
             return null;
         }
 
-        for (String p : sensitiveData) {
-            s = s.replaceAll(p, "***");
+        for (Obfuscation o : sensitiveData) {
+            s = s.replaceAll(o.pattern(), o.replacement());
         }
         return s;
     }
 
     private Path createUnixGitSSH(Path key) throws IOException {
-        Path ssh = IOUtils.createTempFile("ssh", ".sh");
+        Path ssh = PathUtils.createTempFile("ssh", ".sh");
 
         try (PrintWriter w = new PrintWriter(ssh.toFile(), Charset.defaultCharset().toString())) {
             w.println("#!/bin/sh");
@@ -575,7 +636,7 @@ public class GitClient {
                     " -o ServerAliveInterval=" + cfg.sshTimeout().getSeconds() +
                     " -o StrictHostKeyChecking=no \"$@\"");
         }
-        Files.setPosixFilePermissions(ssh, ImmutableSet.of(OWNER_READ, OWNER_EXECUTE));
+        Files.setPosixFilePermissions(ssh, Set.of(OWNER_READ, OWNER_EXECUTE));
         return ssh;
     }
 
@@ -586,7 +647,7 @@ public class GitClient {
     }
 
     private static Path createUnixStandardAskpass(UsernamePassword creds) throws IOException {
-        Path askpass = IOUtils.createTempFile("pass", ".sh");
+        Path askpass = PathUtils.createTempFile("pass", ".sh");
         try (PrintWriter w = new PrintWriter(askpass.toFile(), Charset.defaultCharset().toString())) {
             w.println("#!/bin/sh");
             w.println("case \"$1\" in");
@@ -594,12 +655,12 @@ public class GitClient {
             w.println("Password*) echo '" + quoteUnixCredentials(new String(creds.getPassword())) + "' ;;");
             w.println("esac");
         }
-        Files.setPosixFilePermissions(askpass, ImmutableSet.of(OWNER_READ, OWNER_EXECUTE));
+        Files.setPosixFilePermissions(askpass, Set.of(OWNER_READ, OWNER_EXECUTE));
         return askpass;
     }
 
     private static Path createSshKeyFile(KeyPair keyPair) throws IOException {
-        Path keyFile = IOUtils.createTempFile("ssh", ".key");
+        Path keyFile = PathUtils.createTempFile("ssh", ".key");
 
         Files.write(keyFile, keyPair.getPrivateKey());
 
@@ -729,5 +790,9 @@ public class GitClient {
         static ImmutableCommitInfo.Builder builder() {
             return ImmutableCommitInfo.builder();
         }
+    }
+
+    private record Obfuscation(String pattern,
+                               String replacement) {
     }
 }
